<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_bank_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tv_bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_bank_name"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>


    <Spinner
        android:id="@+id/tv_account_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:entries="@array/account_types"
        android:gravity="center"
        android:hint="@string/hint_bank_name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_bank_name" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_account_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_account_type">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tv_account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account_number"
            android:inputType="number"
            android:singleLine="true"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_debit_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_account_number">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tv_debit_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_debit_card_number"
            android:inputType="number"
            android:maxLength="16"
            android:singleLine="true"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_credit_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_debit_card_number">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tv_credit_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_credit_card_number"
            android:inputType="number"
            android:maxLength="16"
            android:singleLine="true"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_debit_card_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_credit_card_number">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tv_debit_card_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_debit_card_pin"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:singleLine="true"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_credit_card_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_debit_card_pin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tv_credit_card_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_credit_card_pin"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:singleLine="true"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_netbanking_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_credit_card_pin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tv_net_banking_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_net_banking_id"
            android:singleLine="true"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_netbanking_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_netbanking_id">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tv_net_banking_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_net_banking_password"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>


