<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_id"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email_id"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email_platform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email_password">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email_platform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_platform_name"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_recovery_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:theme="@style/MyEditText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/MyErrorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email_platform">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_recovery_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_recovery_email"
            android:singleLine="true"
            android:textSize="16sp" />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>