<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tv_platform_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hint_platform_name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_id" />

    <EditText
        android:id="@+id/et_platform_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:inputType="textCapCharacters"
        android:singleLine="true"
        android:textColor="@drawable/selector_edit_text_color"
        android:textCursorDrawable="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_platform_name"
        tools:text="GMAIL" />

    <TextView
        android:id="@+id/tv_email_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hint_email_password"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_platform_name" />

    <EditText
        android:id="@+id/et_email_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@drawable/selector_edit_text_color"
        android:textCursorDrawable="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_password"
        tools:text="yoman@123" />


    <TextView
        android:id="@+id/tv_recovery_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hint_recovery_email"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_password" />

    <EditText
        android:id="@+id/et_recovery_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@drawable/selector_edit_text_color"
        android:textCursorDrawable="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recovery_email"
        tools:text="abhinav.sharma@gmail.com" />


</android.support.constraint.ConstraintLayout>